--- a/deb/openmediavault/usr/share/openmediavault/locale/sl_SI/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/sl_SI/openmediavault.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 10:50+0000\n"
+"POT-Creation-Date: 2018-10-05 22:03+0200\n"
+"PO-Revision-Date: 2018-10-05 20:04+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Slovenian (Slovenia) (http://www.transifex.com/votdev/openmediavault/language/sl_SI/)\n"
 "MIME-Version: 1.0\n"
@@ -692,6 +692,12 @@ msgstr ""
 
 msgid "Cook Islands"
 msgstr "Cookovi otoki"
+
+msgid "Copy"
+msgstr ""
+
+msgid "Copy public SSH key"
+msgstr ""
 
 msgid "Copy to clipboard"
 msgstr "Kopiraj v odložišče"
@@ -1436,6 +1442,9 @@ msgstr "Gvineja Bissau"
 msgid "Guyana"
 msgstr "Gvajana"
 
+msgid "HTTP 404 error"
+msgstr ""
+
 msgid "HTTP-Proxy"
 msgstr "HTTP-Proxy"
 
@@ -1649,6 +1658,11 @@ msgstr "Nameščevanje vtičnikov..."
 
 msgid "Installing updates ..."
 msgstr "Nameščevanje posodobitev ..."
+
+msgid ""
+"Installs the public SSH key on a remote system as an authorized key. Make "
+"sure password authentication is enabled on that remote system."
+msgstr ""
 
 msgid "Interfaces"
 msgstr "Vmesniki"
@@ -3307,6 +3321,9 @@ msgstr ""
 msgid "The hostname is a label that identifies the system to the network."
 msgstr ""
 
+msgid "The hostname of the remote system."
+msgstr ""
+
 msgid ""
 "The information about available software is out-of-date. You need to reload "
 "the information about available software."
@@ -3352,6 +3369,9 @@ msgid ""
 "single share to be used flexibly by each user."
 msgstr ""
 
+msgid "The port on which SSH is running on the remote system."
+msgstr ""
+
 msgid "The private RSA key in X.509 PEM format."
 msgstr "Privatni RSA ključ v X.509 PEM formatu."
 
@@ -3362,6 +3382,9 @@ msgid ""
 "The repository will be checked for new, removed or upgraded software "
 "packages."
 msgstr "Repozitorij bo preverjen za nove, odstranjene ali nadgrajene programske pakete."
+
+msgid "The requested page was not found."
+msgstr ""
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
