--- a/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-05-24 19:51+0000\n"
-"Last-Translator: zubr139\n"
+"POT-Creation-Date: 2018-10-05 22:03+0200\n"
+"PO-Revision-Date: 2018-10-05 20:04+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -694,6 +694,12 @@ msgstr "Тест для виявлення дефектів, що виникли
 
 msgid "Cook Islands"
 msgstr "Острови Кука"
+
+msgid "Copy"
+msgstr ""
+
+msgid "Copy public SSH key"
+msgstr ""
 
 msgid "Copy to clipboard"
 msgstr "Копіювати в буфер обміну"
@@ -1438,6 +1444,9 @@ msgstr "Гвінея-Бісау"
 msgid "Guyana"
 msgstr "Ґайана"
 
+msgid "HTTP 404 error"
+msgstr ""
+
 msgid "HTTP-Proxy"
 msgstr "HTTP-проксі"
 
@@ -1651,6 +1660,11 @@ msgstr "Встановлення модулів..."
 
 msgid "Installing updates ..."
 msgstr "Встановлення оновлень..."
+
+msgid ""
+"Installs the public SSH key on a remote system as an authorized key. Make "
+"sure password authentication is enabled on that remote system."
+msgstr ""
 
 msgid "Interfaces"
 msgstr "Інтерфейси"
@@ -3309,6 +3323,9 @@ msgstr "Створення файлової системи успішно зав
 msgid "The hostname is a label that identifies the system to the network."
 msgstr "Ім'я вузла - ідентифікатор системи в мережі."
 
+msgid "The hostname of the remote system."
+msgstr ""
+
 msgid ""
 "The information about available software is out-of-date. You need to reload "
 "the information about available software."
@@ -3354,6 +3371,9 @@ msgid ""
 "single share to be used flexibly by each user."
 msgstr "Дозволи на нові файли і каталоги зазвичай регулюються маскою, але параметр успадкування має більш високий пріоритет. Це дозволяє гнучко організувати спільне використання багатьма користувачами одного загального ресурсу."
 
+msgid "The port on which SSH is running on the remote system."
+msgstr ""
+
 msgid "The private RSA key in X.509 PEM format."
 msgstr "Секретний ключ RSA в форматі X.509 PEM."
 
@@ -3364,6 +3384,9 @@ msgid ""
 "The repository will be checked for new, removed or upgraded software "
 "packages."
 msgstr "Сховище буде перевірене на наявність нових, видалених або оновлених пакетів програмного забезпечення."
+
+msgid "The requested page was not found."
+msgstr ""
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
