Issue #182: Remove percentage text in progress bar when config is applied. It is not possible to display an accurate value here.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (4.1.13) stable; urgency=low
+
+  * Issue #182: Remove percentage text in progress bar when config is
+    applied. It is not possible to display an accurate value here.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Oct 2018 07:03:44 +0200
+
 openmediavault (4.1.12) stable; urgency=low
 
   * Fix display bug in S.M.A.R.T. attributes grid.
