--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
-openmediavault (4.1.13) stable; urgency=low
+openmediavault (4.1.13-1) stable; urgency=low
 
+  * Fix various issues found by the lgtm.com project.
   * Issue #182: Remove percentage text in progress bar when config is
     applied. It is not possible to display an accurate value here.
 
