Fix several warnings from LGTM, see https://lgtm.com/projects/g/openmediavault/openmediavault/alerts.
(cherry picked from commit 9271ab9e73f6198b15a58eda8faa3166d5040f96)
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-lvm2 (4.0.7-1) stable; urgency=low
+
+  * Fix various issues found by the lgtm.com project.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Oct 2018 18:44:39 +0200
+
 openmediavault-lvm2 (4.0.6-1) stable; urgency=low
 
   * Fix the pattern attribute in the JSON schemas according to the ECMA 262
