--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,4 +1,4 @@
-openmediavault (5.0) unstable; urgency=low
+openmediavault (5.0-1) unstable; urgency=low
 
   * Use Salt to deploy configuration settings. Using 'omv-salt stage run all'
     will deploy the whole system according to the configuration database.
@@ -10,8 +10,9 @@ openmediavault (5.0) unstable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
 
-openmediavault (4.1.13) stable; urgency=low
+openmediavault (4.1.13-1) stable; urgency=low
 
+  * Fix various issues found by the lgtm.com project.
   * Issue #182: Remove percentage text in progress bar when config is
     applied. It is not possible to display an accurate value here.
 
