Issue #192: Allow to define shell at user import.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,6 +3,7 @@ openmediavault (4.1.13-1) stable; urgency=low
   * Fix various issues found by the lgtm.com project.
   * Issue #182: Remove percentage text in progress bar when config is
     applied. It is not possible to display an accurate value here.
+  * Issue #192: Allow to define shell at user import.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Oct 2018 07:03:44 +0200
 
