--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -13,6 +13,7 @@ openmediavault (5.0-1) unstable; urgency=low
 openmediavault (4.1.13-1) stable; urgency=low
 
   * Fix various issues found by the lgtm.com project.
+  * Use /bin/sh as default shell when creating/importing users via WebUI.
   * Issue #182: Remove percentage text in progress bar when config is
     applied. It is not possible to display an accurate value here.
   * Issue #192: Allow to define shell at user import.
