--- a/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-05 22:03+0200\n"
-"PO-Revision-Date: 2018-10-05 20:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-10-09 17:02+0000\n"
+"Last-Translator: Kostas Moho <kgounaris@hotmail.com>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/votdev/openmediavault/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -694,10 +694,10 @@ msgid "Cook Islands"
 msgstr "Cook Islands"
 
 msgid "Copy"
-msgstr ""
+msgstr "Αντιγραφή"
 
 msgid "Copy public SSH key"
-msgstr ""
+msgstr "Αντιγραφή δημόσιου κλειδιού SSH"
 
 msgid "Copy to clipboard"
 msgstr "Αντιγραφή στο πρόχειρο"
@@ -1443,7 +1443,7 @@ msgid "Guyana"
 msgstr "Guyana"
 
 msgid "HTTP 404 error"
-msgstr ""
+msgstr "Σφάλμα ΗΤΤΡ 404"
 
 msgid "HTTP-Proxy"
 msgstr "Διαμεσολαβητής HTTP"
@@ -1662,7 +1662,7 @@ msgstr "Εγκατατάσταση ενημερώσεων ..."
 msgid ""
 "Installs the public SSH key on a remote system as an authorized key. Make "
 "sure password authentication is enabled on that remote system."
-msgstr ""
+msgstr "Εγκαθιστά το δημόσιο κλειδί SSH σε κάποιο απομακρυσμένο σύστημα ως πιστοποιημένο κλειδί. Η πιστοποίηση μέσω κωδικού πρέπει να είναι ενεργοποιημένη στο απομακρυσμένο σύστημα."
 
 msgid "Interfaces"
 msgstr "Διεπαφές"
@@ -3322,7 +3322,7 @@ msgid "The hostname is a label that identifies the system to the network."
 msgstr "Το όνομα συστήματος είναι μια ετικέτα που χαρακτηρίζει το σύστημα στο δίκτυο."
 
 msgid "The hostname of the remote system."
-msgstr ""
+msgstr "Το όνομα του απομακρυσμένου συστήματος."
 
 msgid ""
 "The information about available software is out-of-date. You need to reload "
@@ -3370,7 +3370,7 @@ msgid ""
 msgstr "Οι άδειες σε καινούργια αρχεία και φακέλους ρυθμίζονται κανονικά από την μάσκα δημιουργίας και φακέλου, αλλά η κληρονομικότητα το παρακάμπτει αυτό. Ιδιαίτερα χρήσιμο σε συστήματα με πολλούς χρήστες, καθώς τους προσφέρει ευελιξία."
 
 msgid "The port on which SSH is running on the remote system."
-msgstr ""
+msgstr "Η θύρα στην οποία ακούει το SSH του απομακρυσμένου συστήματος."
 
 msgid "The private RSA key in X.509 PEM format."
 msgstr "Το ιδιωτικό κλειδί RSA σε μορφή X.509 PEM."
@@ -3384,7 +3384,7 @@ msgid ""
 msgstr "Το εναποθετήριο θα ελεγχθεί για νέα, κατηργημένα ή αναβαθμισμένα πακέτα λογισμικού."
 
 msgid "The requested page was not found."
-msgstr ""
+msgstr "Η σελίδα που ζητήθηκε δεν βρέθηκε."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
