--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-05 22:03+0200\n"
-"PO-Revision-Date: 2018-10-05 20:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-10-05 23:12+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -695,10 +695,10 @@ msgid "Cook Islands"
 msgstr "庫克群島"
 
 msgid "Copy"
-msgstr ""
+msgstr "複製"
 
 msgid "Copy public SSH key"
-msgstr ""
+msgstr "複製公開 SSH 金鑰"
 
 msgid "Copy to clipboard"
 msgstr "複製到剪貼板"
@@ -1444,7 +1444,7 @@ msgid "Guyana"
 msgstr "圭亞那"
 
 msgid "HTTP 404 error"
-msgstr ""
+msgstr "HTTP 404 錯誤"
 
 msgid "HTTP-Proxy"
 msgstr "HTTP-代理"
@@ -1663,7 +1663,7 @@ msgstr "安裝更新中 ..."
 msgid ""
 "Installs the public SSH key on a remote system as an authorized key. Make "
 "sure password authentication is enabled on that remote system."
-msgstr ""
+msgstr "在遠端系統上安裝公開 SSH 金鑰以成為一個授權的金鑰。請確定在那個遠端系統上，密碼驗證有被啟用。"
 
 msgid "Interfaces"
 msgstr "介面"
@@ -3323,7 +3323,7 @@ msgid "The hostname is a label that identifies the system to the network."
 msgstr "主機名稱是一個用以於網路上識別系統的標籤。"
 
 msgid "The hostname of the remote system."
-msgstr ""
+msgstr "遠端系統的主機名稱"
 
 msgid ""
 "The information about available software is out-of-date. You need to reload "
@@ -3371,7 +3371,7 @@ msgid ""
 msgstr "新檔案和目錄的權限通常是由創建掩碼和目錄掩碼來控制，但繼承權限參數會蓋換它們。當系統上有許多用戶，並允許單一共享有彈性地被每一用戶使用時，這會特別有用處。"
 
 msgid "The port on which SSH is running on the remote system."
-msgstr ""
+msgstr "遠端系統 SSH 所使用的通訊埠。"
 
 msgid "The private RSA key in X.509 PEM format."
 msgstr "RSA 密鑰用的是 X.509 PEM 格式。"
@@ -3385,7 +3385,7 @@ msgid ""
 msgstr "將對軟體套件庫查看新增、已移除或已升級的軟體套件。"
 
 msgid "The requested page was not found."
-msgstr ""
+msgstr "無法找到所要求的網頁。"
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
