--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/fr_FR/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/fr_FR/openmediavault-diskstats.po
@@ -9,10 +9,10 @@ msgstr ""
 "Project-Id-Version: openmediavault-diskstats\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2017-12-31 13:16+0000\n"
 "Language-Team: French (France) (https://www.transifex.com/votdev/teams/14254/fr_FR/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fr_FR\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
