--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/sl_SI/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/sl_SI/openmediavault-diskstats.po
@@ -9,10 +9,10 @@ msgstr ""
 "Project-Id-Version: openmediavault-diskstats\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2017-12-31 13:16+0000\n"
 "Language-Team: Slovenian (Slovenia) (https://www.transifex.com/votdev/teams/14254/sl_SI/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: sl_SI\n"
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
