--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/zh_TW/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/zh_TW/openmediavault-diskstats.po
@@ -3,17 +3,20 @@
 # This file is distributed under the same license as the openmediavault-diskstats package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# kochin <kochinc@outlook.com>, 2018
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-diskstats\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2017-12-31 13:16+0000\n"
 "Last-Translator: kochin <kochinc@outlook.com>, 2018\n"
 "Language-Team: Chinese (Taiwan) (https://www.transifex.com/votdev/teams/14254/zh_TW/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_TW\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
