--- a/deb/openmediavault-snmp/usr/share/openmediavault/locale/hu_HU/openmediavault-snmp.po
+++ b/deb/openmediavault-snmp/usr/share/openmediavault/locale/hu_HU/openmediavault-snmp.po
@@ -3,17 +3,21 @@
 # This file is distributed under the same license as the openmediavault-snmp package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Sári Gábor <sari.gabor@gmail.com>, 2017
+# Gyuris Gellért <bubu@ujevangelizacio.hu>, 2017
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-snmp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-09-24 20:46+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2017-09-24 18:47+0000\n"
 "Last-Translator: Gyuris Gellért <bubu@ujevangelizacio.hu>, 2017\n"
 "Language-Team: Hungarian (Hungary) (https://www.transifex.com/votdev/teams/14254/hu_HU/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: hu_HU\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
