--- a/deb/openmediavault-snmp/usr/share/openmediavault/locale/tr_TR/openmediavault-snmp.po
+++ b/deb/openmediavault-snmp/usr/share/openmediavault/locale/tr_TR/openmediavault-snmp.po
@@ -3,17 +3,20 @@
 # This file is distributed under the same license as the openmediavault-snmp package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Serhat SUT <serhat.sut@gmail.com>, 2017
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-snmp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-09-24 20:46+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2017-09-24 18:47+0000\n"
 "Last-Translator: Serhat SUT <serhat.sut@gmail.com>, 2017\n"
 "Language-Team: Turkish (Turkey) (https://www.transifex.com/votdev/teams/14254/tr_TR/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: tr_TR\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
