--- a/deb/openmediavault-tftp/usr/share/openmediavault/locale/nl_NL/openmediavault-tftp.po
+++ b/deb/openmediavault-tftp/usr/share/openmediavault/locale/nl_NL/openmediavault-tftp.po
@@ -3,17 +3,20 @@
 # This file is distributed under the same license as the openmediavault-tftp package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Volker <votdev@gmx.de>, 2017
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-tftp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2017-03-31 07:22+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>, 2017\n"
 "Language-Team: Dutch (Netherlands) (https://www.transifex.com/votdev/teams/14254/nl_NL/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: nl_NL\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
