--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,8 @@
 openmediavault (4.1.13-1) stable; urgency=low
 
+  * Update locales.
   * Fix various issues found by the lgtm.com project.
+  * Beatify and lint Python code.
   * Use /bin/sh as default shell when creating/importing users via WebUI.
   * Issue #182: Remove percentage text in progress bar when config is
     applied. It is not possible to display an accurate value here.
