--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-05 22:03+0200\n"
-"PO-Revision-Date: 2018-10-05 20:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-10-06 18:17+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -695,10 +695,10 @@ msgid "Cook Islands"
 msgstr "Cookovy ostrovy"
 
 msgid "Copy"
-msgstr ""
+msgstr "Zkopírovat"
 
 msgid "Copy public SSH key"
-msgstr ""
+msgstr "Zkopírovat veřejnou část SSH klíče"
 
 msgid "Copy to clipboard"
 msgstr "Zkopírovat do schránky"
@@ -1444,7 +1444,7 @@ msgid "Guyana"
 msgstr "Guyana"
 
 msgid "HTTP 404 error"
-msgstr ""
+msgstr "HTTP chyba 404"
 
 msgid "HTTP-Proxy"
 msgstr "HTTP proxy"
@@ -1663,7 +1663,7 @@ msgstr "Instalace aktualizací…"
 msgid ""
 "Installs the public SSH key on a remote system as an authorized key. Make "
 "sure password authentication is enabled on that remote system."
-msgstr ""
+msgstr "Nainstaluje veřejnou část SSH klíče mezi ty oprávněné na protější stroj. Aby toto bylo možné provést, zajistěte, aby na protějším stroji bylo zapnuté ověřování i pomocí hesla."
 
 msgid "Interfaces"
 msgstr "Síťová rozhraní"
@@ -3323,7 +3323,7 @@ msgid "The hostname is a label that identifies the system to the network."
 msgstr "Název pod kterým stroj vystupuje na síti."
 
 msgid "The hostname of the remote system."
-msgstr ""
+msgstr "Název protějšího stroje."
 
 msgid ""
 "The information about available software is out-of-date. You need to reload "
@@ -3371,7 +3371,7 @@ msgid ""
 msgstr "Oprávnění pro nově vytvářené soubory a složky jsou běžně řízeny maskou pro vytváření a maskou složky, ale parametr pro přebírání oprávnění toto přebíjí. Užitečné zejména na systémech, sloužících mnoha uživatelům, kdy je třeba, aby sdílení mohla být pružně používána každým z uživatelů."
 
 msgid "The port on which SSH is running on the remote system."
-msgstr ""
+msgstr "Port na kterém je na protějším stroji spuštěné SSH."
 
 msgid "The private RSA key in X.509 PEM format."
 msgstr "Soukromá část RSA klíče ve formátu PEM dle normy X.509."
@@ -3385,7 +3385,7 @@ msgid ""
 msgstr "Budou zjištěny balíčky software, které jsou v repozitáři nové, aktualizované, nebo byly odebrány."
 
 msgid "The requested page was not found."
-msgstr ""
+msgstr "Požadovaná stránka nebyla nalezena."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
