--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-05 22:03+0200\n"
-"PO-Revision-Date: 2018-10-05 20:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-10-11 09:41+0000\n"
+"Last-Translator: Gyuris Gellért <bubu@ujevangelizacio.hu>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -699,10 +699,10 @@ msgid "Cook Islands"
 msgstr "Cook-szigetek"
 
 msgid "Copy"
-msgstr ""
+msgstr "Másolás"
 
 msgid "Copy public SSH key"
-msgstr ""
+msgstr "Nyilvános SSH-kulcs"
 
 msgid "Copy to clipboard"
 msgstr "Vágólapra másolás"
@@ -1448,7 +1448,7 @@ msgid "Guyana"
 msgstr "Guyana"
 
 msgid "HTTP 404 error"
-msgstr ""
+msgstr "404-es HTTP hiba"
 
 msgid "HTTP-Proxy"
 msgstr "HTTP-Proxy"
@@ -1667,7 +1667,7 @@ msgstr "Frissítések telepítése..."
 msgid ""
 "Installs the public SSH key on a remote system as an authorized key. Make "
 "sure password authentication is enabled on that remote system."
-msgstr ""
+msgstr "Telepíti a távoli rendszerre a nyilvános SSH-kulcsot hitelesített kulcsként. Ellenőrizni kell, hogy a jelszavas azonosítás engedélyezve van-e a távoli rendszeren."
 
 msgid "Interfaces"
 msgstr "Interfészek"
@@ -3327,7 +3327,7 @@ msgid "The hostname is a label that identifies the system to the network."
 msgstr "A hosztnév egy címke, ami azonosítja a rendszert a hálózaton."
 
 msgid "The hostname of the remote system."
-msgstr ""
+msgstr "Távoli rendszer kiszolgálóneve."
 
 msgid ""
 "The information about available software is out-of-date. You need to reload "
@@ -3375,7 +3375,7 @@ msgid ""
 msgstr "A jogosultságok új fájlokon és könyvtárakon általában szabályozva vannak létrehozó maszk és könyvtár maszk által, de az örökölt jogosultságok paraméterei felülírják ezt. Ez különösen hasznos lehet több felhasználós rendszereknél, hogy egy megosztás rugalmasan használható legyen az egyes felhasználóknak."
 
 msgid "The port on which SSH is running on the remote system."
-msgstr ""
+msgstr "A portszám, amelyen az SSH fut a távoli rendszeren."
 
 msgid "The private RSA key in X.509 PEM format."
 msgstr "A privát RSA kulcs a X.509 PEM formátumban."
@@ -3389,7 +3389,7 @@ msgid ""
 msgstr "A tároló ellenőrizve lesz az új, eltávolított, vagy frissített szoftverekért."
 
 msgid "The requested page was not found."
-msgstr ""
+msgstr "A kért oldal nem található."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
