--- a/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-05 22:03+0200\n"
-"PO-Revision-Date: 2018-10-05 20:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-10-17 03:43+0000\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/votdev/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -694,10 +694,10 @@ msgid "Cook Islands"
 msgstr "クック諸島"
 
 msgid "Copy"
-msgstr ""
+msgstr "コピー"
 
 msgid "Copy public SSH key"
-msgstr ""
+msgstr "公開SSHキーをコピー"
 
 msgid "Copy to clipboard"
 msgstr "クリップボードへコピー"
@@ -1443,7 +1443,7 @@ msgid "Guyana"
 msgstr "ガイアナ"
 
 msgid "HTTP 404 error"
-msgstr ""
+msgstr "HTTP 404 エラー"
 
 msgid "HTTP-Proxy"
 msgstr "HTTP-プロキシ"
@@ -1662,7 +1662,7 @@ msgstr "アップデートをインストールしています ..."
 msgid ""
 "Installs the public SSH key on a remote system as an authorized key. Make "
 "sure password authentication is enabled on that remote system."
-msgstr ""
+msgstr "公開鍵をリモートシステムにインストールします。 リモートシステムでパスワード認証が有効になっていることを確認してください。"
 
 msgid "Interfaces"
 msgstr "インタフェース"
@@ -3322,7 +3322,7 @@ msgid "The hostname is a label that identifies the system to the network."
 msgstr "ホスト名はネットワーク上でシステムを識別するためのラベルです。"
 
 msgid "The hostname of the remote system."
-msgstr ""
+msgstr "リモートシステムのホスト名。"
 
 msgid ""
 "The information about available software is out-of-date. You need to reload "
@@ -3370,7 +3370,7 @@ msgid ""
 msgstr "新しいファイルとディレクトリのパーミッションは通常、Create mask と Directory mask によって制御されていますが、パーミッションパラメータはこれを無効にします。これは、1つの共有が各ユーザによって柔軟に利用される事を可能にし、多くのユーザとシステムで有益です。"
 
 msgid "The port on which SSH is running on the remote system."
-msgstr ""
+msgstr "リモートシステム上で実行されているSSHのポート。"
 
 msgid "The private RSA key in X.509 PEM format."
 msgstr "X.509 PEM形式でのプライベートRSA鍵。"
@@ -3384,7 +3384,7 @@ msgid ""
 msgstr "新規、削除またはアップデートされたソフトウェアパッケージが無いか、リポジトリをチェックします。"
 
 msgid "The requested page was not found."
-msgstr ""
+msgstr "要求されたページはありません。"
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
