--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -12,14 +12,14 @@
 # Volker <votdev@gmx.de>, 2018
 # azlk azlk <phg.azlk@gmail.com>, 2012
 # Артур Мудрых <arturmon82@gmail.com>, 2012-2013,2015-2016
-# Артур Мудрых <arturmon82@gmail.com>, 2017
+# Артур Мудрых <arturmon82@gmail.com>, 2017-2018
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-05 22:03+0200\n"
-"PO-Revision-Date: 2018-10-05 20:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-10-25 06:30+0000\n"
+"Last-Translator: Артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -703,10 +703,10 @@ msgid "Cook Islands"
 msgstr "острова Кука"
 
 msgid "Copy"
-msgstr ""
+msgstr "Копировать"
 
 msgid "Copy public SSH key"
-msgstr ""
+msgstr "Копировать публичный ключ SSH"
 
 msgid "Copy to clipboard"
 msgstr "Скопировать в буфер обмена"
@@ -1452,7 +1452,7 @@ msgid "Guyana"
 msgstr "Гайана"
 
 msgid "HTTP 404 error"
-msgstr ""
+msgstr "Ошибка HTTP 404"
 
 msgid "HTTP-Proxy"
 msgstr "HTTP-Прокси"
@@ -1671,7 +1671,7 @@ msgstr "Установка обновлений ..."
 msgid ""
 "Installs the public SSH key on a remote system as an authorized key. Make "
 "sure password authentication is enabled on that remote system."
-msgstr ""
+msgstr "Устанавливается открытый SSH-ключ на удаленной системе в качестве авторизованного ключа. Убедитесь, что аутентификация пароля включена в этой удаленной системе."
 
 msgid "Interfaces"
 msgstr "Интерфейсы"
@@ -2418,7 +2418,7 @@ msgstr "Ознакомьтесь со <a href='http://www.samba.org/samba/docs/m
 msgid ""
 "Please check the <a href='https://man.openbsd.org/sshd_config.5' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Ознакомьтесь со <a href='https://man.openbsd.org/sshd_config.5' target='_blank'>страницей описания</a> для более подробной информации."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Пожалуйста, выберите стереть устройство или \"Отмена\" для отмены."
@@ -3331,7 +3331,7 @@ msgid "The hostname is a label that identifies the system to the network."
 msgstr "Имя узла - идентификатор системы в сети."
 
 msgid "The hostname of the remote system."
-msgstr ""
+msgstr "Имя хоста удаленной системы."
 
 msgid ""
 "The information about available software is out-of-date. You need to reload "
@@ -3379,7 +3379,7 @@ msgid ""
 msgstr "Разрешения на новые файлы и каталоги обычно регулируются маской, но параметр наследования имеет более высокий приоритет. Это позволяет гибко организовать совместное использование многими пользователями одного общего ресурса."
 
 msgid "The port on which SSH is running on the remote system."
-msgstr ""
+msgstr "Порт, на котором работает SSH в удаленной системе."
 
 msgid "The private RSA key in X.509 PEM format."
 msgstr "Закрытый ключ RSA в формате X.509 PEM."
@@ -3393,7 +3393,7 @@ msgid ""
 msgstr "Репозиторий будет проверен на новые, удаленные или обновленные пакеты программного обеспечения."
 
 msgid "The requested page was not found."
-msgstr ""
+msgstr "Запрошенная страница не найдена."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
@@ -3529,14 +3529,14 @@ msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Это поле должно содержать только цифры, разделенные <,> или <;>"
 
 msgid "This field should only contain options separated by <,>"
-msgstr ""
+msgstr "Это поле должно содержать только опции, разделенные символом <,>"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Это поле должно содержать только порты (0 - 65535), разделенные <,> или <;>"
 
 msgid "This field should only contain strings separated by <,>"
-msgstr ""
+msgstr "Это поле должно содержать только строки, разделенные символом <,>"
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Это поле должно только содержать строки, разделенные <,> или <;>"
