--- a/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-05 22:03+0200\n"
-"PO-Revision-Date: 2018-10-05 20:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-10-14 17:40+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/votdev/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -694,10 +694,10 @@ msgid "Cook Islands"
 msgstr "Cook Adaları"
 
 msgid "Copy"
-msgstr ""
+msgstr "Kopya"
 
 msgid "Copy public SSH key"
-msgstr ""
+msgstr "Açık SSH anahtarını kopyala"
 
 msgid "Copy to clipboard"
 msgstr "Panoya kopyala"
@@ -1443,7 +1443,7 @@ msgid "Guyana"
 msgstr "Guyana"
 
 msgid "HTTP 404 error"
-msgstr ""
+msgstr "HTTP 404 hatası"
 
 msgid "HTTP-Proxy"
 msgstr "HTTP-Vekil Sunucu"
@@ -1662,7 +1662,7 @@ msgstr "Güncellemeler kuruluyor ..."
 msgid ""
 "Installs the public SSH key on a remote system as an authorized key. Make "
 "sure password authentication is enabled on that remote system."
-msgstr ""
+msgstr "Açık SSH anahtarını uzaktan erişilen sisteme onaylanmış anahtar olarak kurar. Uzaktan erişilen sistemde şifre doğrulamasının aktif olduğundan emin olunuz."
 
 msgid "Interfaces"
 msgstr "Arabirim"
@@ -3322,7 +3322,7 @@ msgid "The hostname is a label that identifies the system to the network."
 msgstr "Sistem adı, ağ üzerindeki bir sistemi belirleyen bir etikettir."
 
 msgid "The hostname of the remote system."
-msgstr ""
+msgstr "Uzaktan erişilen sistemin adı."
 
 msgid ""
 "The information about available software is out-of-date. You need to reload "
@@ -3370,7 +3370,7 @@ msgid ""
 msgstr "Yeni dosya ve klasörler üzerindeki yetkiler normalde oluşturma kalıbı ve klasör kalıbı ile düzenlenir fakat aktarılan yetkiler bu parametreleri geçersiz kılar. Bu özellikle çok kullanıcılı sistemlerde her bir kullanıcının tek bir paylaşımı rahatça kullanabilmesine imkan sağlar."
 
 msgid "The port on which SSH is running on the remote system."
-msgstr ""
+msgstr "Uzaktan erişilen sistemde çalışan SSH servisinin portu."
 
 msgid "The private RSA key in X.509 PEM format."
 msgstr " X.509 PEM biöeminde özel RSA anahtarı."
@@ -3384,7 +3384,7 @@ msgid ""
 msgstr "Yazılım deposu yeni, kaldırılmış ve güncellenmiş yazılım paketleri açısından kontrol edilecektir."
 
 msgid "The requested page was not found."
-msgstr ""
+msgstr "İstek gönderilen sayfa bulunamadı."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
