--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-02-14 07:51+0000\n"
+"POT-Creation-Date: 2018-10-05 22:03+0200\n"
+"PO-Revision-Date: 2018-10-06 07:28+0000\n"
 "Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
@@ -695,6 +695,12 @@ msgstr "Auto prueba de transferencia"
 
 msgid "Cook Islands"
 msgstr "Islas Cook"
+
+msgid "Copy"
+msgstr "Copiar"
+
+msgid "Copy public SSH key"
+msgstr "Copiar clave pública SSH"
 
 msgid "Copy to clipboard"
 msgstr "Copiar al portapapeles"
@@ -1439,6 +1445,9 @@ msgstr "Guinea-Bissau"
 msgid "Guyana"
 msgstr "República Cooperativa de Guyana"
 
+msgid "HTTP 404 error"
+msgstr "HTTP 404 error"
+
 msgid "HTTP-Proxy"
 msgstr "HTTP-Proxy"
 
@@ -1652,6 +1661,11 @@ msgstr "Instalando Plugins ..."
 
 msgid "Installing updates ..."
 msgstr "Instalando actualizaciones ..."
+
+msgid ""
+"Installs the public SSH key on a remote system as an authorized key. Make "
+"sure password authentication is enabled on that remote system."
+msgstr "Instalar la clave pública SSH en un sistema remoto como clave autorizada. Asegúrese de que la autentificación por contraseña está habilitada en el sistema remoto."
 
 msgid "Interfaces"
 msgstr "Interfaces"
@@ -3310,6 +3324,9 @@ msgstr "Se ha creado satisfactoriamente el sistema de archivos."
 msgid "The hostname is a label that identifies the system to the network."
 msgstr "El nombre de host es una etiqueta que identifica al sistema en la red."
 
+msgid "The hostname of the remote system."
+msgstr "Nombre del Host remoto"
+
 msgid ""
 "The information about available software is out-of-date. You need to reload "
 "the information about available software."
@@ -3355,6 +3372,9 @@ msgid ""
 "single share to be used flexibly by each user."
 msgstr "Los permisos sobre los nuevos archivos y directorios se establecen por la máscara de creación y la máscara de directorio, pero el parámetro de herencia de permisos prevalece. Puede ser útil especialmente en sistemas con muchos usuarios para permitir una utilización de una misma compartición de una forma flexible para cada usuario."
 
+msgid "The port on which SSH is running on the remote system."
+msgstr "El puerto en el que corre el servicio SSH en el sistema remoto"
+
 msgid "The private RSA key in X.509 PEM format."
 msgstr "La clave pública RSA en formato X.509 PEM."
 
@@ -3365,6 +3385,9 @@ msgid ""
 "The repository will be checked for new, removed or upgraded software "
 "packages."
 msgstr "El repositorio será recargado en busca de nuevos, eliminados o mejorados paquetes de software."
+
+msgid "The requested page was not found."
+msgstr "La pagina solicitada no existe."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
