--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -13,9 +13,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-08-07 11:33+0000\n"
-"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
+"POT-Creation-Date: 2018-10-05 22:03+0200\n"
+"PO-Revision-Date: 2018-10-11 09:41+0000\n"
+"Last-Translator: Gyuris Gellért <bubu@ujevangelizacio.hu>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -697,6 +697,12 @@ msgstr "Önteszt továbbítása"
 
 msgid "Cook Islands"
 msgstr "Cook-szigetek"
+
+msgid "Copy"
+msgstr "Másolás"
+
+msgid "Copy public SSH key"
+msgstr "Nyilvános SSH-kulcs"
 
 msgid "Copy to clipboard"
 msgstr "Vágólapra másolás"
@@ -1441,6 +1447,9 @@ msgstr "Guinea-Bissau"
 msgid "Guyana"
 msgstr "Guyana"
 
+msgid "HTTP 404 error"
+msgstr "404-es HTTP hiba"
+
 msgid "HTTP-Proxy"
 msgstr "HTTP-Proxy"
 
@@ -1654,6 +1663,11 @@ msgstr "Bővítmények telepítése..."
 
 msgid "Installing updates ..."
 msgstr "Frissítések telepítése..."
+
+msgid ""
+"Installs the public SSH key on a remote system as an authorized key. Make "
+"sure password authentication is enabled on that remote system."
+msgstr "Telepíti a távoli rendszerre a nyilvános SSH-kulcsot hitelesített kulcsként. Ellenőrizni kell, hogy a jelszavas azonosítás engedélyezve van-e a távoli rendszeren."
 
 msgid "Interfaces"
 msgstr "Interfészek"
@@ -3312,6 +3326,9 @@ msgstr "A fájlrendszer létrehozása sikeresen befejeződött."
 msgid "The hostname is a label that identifies the system to the network."
 msgstr "A hosztnév egy címke, ami azonosítja a rendszert a hálózaton."
 
+msgid "The hostname of the remote system."
+msgstr "Távoli rendszer kiszolgálóneve."
+
 msgid ""
 "The information about available software is out-of-date. You need to reload "
 "the information about available software."
@@ -3357,6 +3374,9 @@ msgid ""
 "single share to be used flexibly by each user."
 msgstr "A jogosultságok új fájlokon és könyvtárakon általában szabályozva vannak létrehozó maszk és könyvtár maszk által, de az örökölt jogosultságok paraméterei felülírják ezt. Ez különösen hasznos lehet több felhasználós rendszereknél, hogy egy megosztás rugalmasan használható legyen az egyes felhasználóknak."
 
+msgid "The port on which SSH is running on the remote system."
+msgstr "A portszám, amelyen az SSH fut a távoli rendszeren."
+
 msgid "The private RSA key in X.509 PEM format."
 msgstr "A privát RSA kulcs a X.509 PEM formátumban."
 
@@ -3367,6 +3387,9 @@ msgid ""
 "The repository will be checked for new, removed or upgraded software "
 "packages."
 msgstr "A tároló ellenőrizve lesz az új, eltávolított, vagy frissített szoftverekért."
+
+msgid "The requested page was not found."
+msgstr "A kért oldal nem található."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
