--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -12,14 +12,14 @@
 # Volker <votdev@gmx.de>, 2018
 # azlk azlk <phg.azlk@gmail.com>, 2012
 # Артур Мудрых <arturmon82@gmail.com>, 2012-2013,2015-2016
-# Артур Мудрых <arturmon82@gmail.com>, 2017
+# Артур Мудрых <arturmon82@gmail.com>, 2017-2018
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-07-11 06:32+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"POT-Creation-Date: 2018-10-05 22:03+0200\n"
+"PO-Revision-Date: 2018-10-25 06:30+0000\n"
+"Last-Translator: Артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -701,6 +701,12 @@ msgstr "Тест для выяснения дефектов, возникших 
 
 msgid "Cook Islands"
 msgstr "острова Кука"
+
+msgid "Copy"
+msgstr "Копировать"
+
+msgid "Copy public SSH key"
+msgstr "Копировать публичный ключ SSH"
 
 msgid "Copy to clipboard"
 msgstr "Скопировать в буфер обмена"
@@ -1445,6 +1451,9 @@ msgstr "Гвинея-Бисау"
 msgid "Guyana"
 msgstr "Гайана"
 
+msgid "HTTP 404 error"
+msgstr "Ошибка HTTP 404"
+
 msgid "HTTP-Proxy"
 msgstr "HTTP-Прокси"
 
@@ -1658,6 +1667,11 @@ msgstr "Установка плагинов ..."
 
 msgid "Installing updates ..."
 msgstr "Установка обновлений ..."
+
+msgid ""
+"Installs the public SSH key on a remote system as an authorized key. Make "
+"sure password authentication is enabled on that remote system."
+msgstr "Устанавливается открытый SSH-ключ на удаленной системе в качестве авторизованного ключа. Убедитесь, что аутентификация пароля включена в этой удаленной системе."
 
 msgid "Interfaces"
 msgstr "Интерфейсы"
@@ -2404,7 +2418,7 @@ msgstr "Ознакомьтесь со <a href='http://www.samba.org/samba/docs/m
 msgid ""
 "Please check the <a href='https://man.openbsd.org/sshd_config.5' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Ознакомьтесь со <a href='https://man.openbsd.org/sshd_config.5' target='_blank'>страницей описания</a> для более подробной информации."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Пожалуйста, выберите стереть устройство или \"Отмена\" для отмены."
@@ -3316,6 +3330,9 @@ msgstr "Создание файловой системы успешно заве
 msgid "The hostname is a label that identifies the system to the network."
 msgstr "Имя узла - идентификатор системы в сети."
 
+msgid "The hostname of the remote system."
+msgstr "Имя хоста удаленной системы."
+
 msgid ""
 "The information about available software is out-of-date. You need to reload "
 "the information about available software."
@@ -3361,6 +3378,9 @@ msgid ""
 "single share to be used flexibly by each user."
 msgstr "Разрешения на новые файлы и каталоги обычно регулируются маской, но параметр наследования имеет более высокий приоритет. Это позволяет гибко организовать совместное использование многими пользователями одного общего ресурса."
 
+msgid "The port on which SSH is running on the remote system."
+msgstr "Порт, на котором работает SSH в удаленной системе."
+
 msgid "The private RSA key in X.509 PEM format."
 msgstr "Закрытый ключ RSA в формате X.509 PEM."
 
@@ -3371,6 +3391,9 @@ msgid ""
 "The repository will be checked for new, removed or upgraded software "
 "packages."
 msgstr "Репозиторий будет проверен на новые, удаленные или обновленные пакеты программного обеспечения."
+
+msgid "The requested page was not found."
+msgstr "Запрошенная страница не найдена."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
@@ -3506,14 +3529,14 @@ msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Это поле должно содержать только цифры, разделенные <,> или <;>"
 
 msgid "This field should only contain options separated by <,>"
-msgstr ""
+msgstr "Это поле должно содержать только опции, разделенные символом <,>"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Это поле должно содержать только порты (0 - 65535), разделенные <,> или <;>"
 
 msgid "This field should only contain strings separated by <,>"
-msgstr ""
+msgstr "Это поле должно содержать только строки, разделенные символом <,>"
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Это поле должно только содержать строки, разделенные <,> или <;>"
